catkin_ws/logs/iq_gnc/build.make.238.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(geographic_msgs::GeoPoseStamped)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:180:51: error: ‘msg’ was not declared in this scope
  180 |   geographic_msgs::GeoPoseStamped drone1_gps_g = *msg;
      |                                                   ^~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘int main(int, char**)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:245:7: error: ‘drone1_gps_sub’ was not declared in this scope; did you mean ‘drone1_pos_cb’?
  245 |       drone1_gps_sub = gnc_node.subscribe<geographic_msgs::GeoPoseStamped>("/drone1/mavros/setpoint_position/global", 10, drone1_gpsSub_cb);
      |       ^~~~~~~~~~~~~~
      |       drone1_pos_cb
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1891: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
